<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iiooo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
	<string name="Plus">＋</string>
	<string name="Minus">－</string>
	<string name="Multiply">×</string>
	<string name="Division">÷</string>
	<string name="Equal">=</string>
	
	<string name="Clear">C</string>
	
	<string name="key_0">0</string>
	<string name="key_1">1</string>
	<string name="key_2">2</string>
	<string name="key_3">3</string>
	<string name="key_4">4</string>
	<string name="key_5">5</string>
	<string name="key_6">6</string>
	<string name="key_7">7</string>
	<string name="key_8">8</string>
	<string name="key_9">9</string>
</resources>
