<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:orientation="vertical"
		android:layout_height="fill_parent" >
	<LinearLayout
			android:layout_width="fill_parent"
			android:orientation="vertical"
			android:layout_height="fill_parent"
			android:layout_weight="3">
		<EditText
		        android:id="@+id/CaculateResult"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:text="@string/hello_world" />
	</LinearLayout>

	<LinearLayout
			android:layout_width="fill_parent"
			android:orientation="vertical"
			android:layout_height="fill_parent"
			android:layout_weight="1">
		<LinearLayout
				android:layout_width="fill_parent"
				android:orientation="horizontal"
				android:layout_height="fill_parent"
				android:layout_weight="1">
			<Button
			        android:id="@+id/button1"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1"
			        android:text="@string/key_1" />
			<Button
			        android:id="@+id/button2"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1"
			        android:text="@string/key_2" />
			<Button
			        android:id="@+id/button3"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1"
			        android:text="@string/key_3" />
			<Button
			        android:id="@+id/btn_Multiply"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1"
			        android:text="@string/Multiply" />
		</LinearLayout>
		<LinearLayout
				android:layout_width="fill_parent"
				android:orientation="horizontal"
				android:layout_height="fill_parent"
				android:layout_weight="1">
			<Button
			        android:id="@+id/button4"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1"
			        android:text="@string/key_4" />
			
			<Button
			        android:id="@+id/button5"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1"
			        android:text="@string/key_5" />
			<Button
			        android:id="@+id/button6"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1"
			        android:text="@string/key_6" />
			<Button
			        android:id="@+id/btn_Division"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1"
			        android:text="@string/Division" />
		</LinearLayout>
		<LinearLayout
				android:layout_width="fill_parent"
				android:orientation="horizontal"
				android:layout_height="fill_parent"
				android:layout_weight="1">
			<Button
			        android:id="@+id/button7"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1"
			        android:text="@string/key_7" />
			
			<Button
			        android:id="@+id/button8"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1"
			        android:text="@string/key_8" />
			<Button
			        android:id="@+id/button9"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1"
			        android:text="@string/key_9" />
			<Button
			        android:id="@+id/btn_Minus"
			        android:layout_width="fill_parent"
			        android:layout_height="fill_parent"
			        android:layout_weight="1"
			        android:text="@string/Minus" />
		</LinearLayout>
		<LinearLayout
				android:layout_width="fill_parent"
				android:orientation="horizontal"
				android:layout_height="fill_parent"
				android:layout_weight="1">
			<Button
			       android:id="@+id/button0"
		           android:layout_width="fill_parent"
		           android:layout_height="fill_parent"
		           android:layout_weight="1"
			       android:text="@string/key_0" />
			<Button
			       android:id="@+id/btn_Clear"
			       android:layout_width="fill_parent"
			       android:layout_height="fill_parent"
			       android:layout_weight="1"
			       android:text="@string/Clear" />
		    <Button
			       android:id="@+id/btn_Equal"
			       android:layout_width="fill_parent"
			       android:layout_height="fill_parent"
			       android:layout_weight="1"
			       android:text="@string/Equal" />
			<Button
			       android:id="@+id/btn_Plus"
			       android:layout_width="fill_parent"
			       android:layout_height="fill_parent"
			       android:layout_weight="1"
			       android:text="@string/Plus" />
		</LinearLayout>	    
	</LinearLayout>

    

    

    








    
    
</LinearLayout>